# PortfolioLive

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  dev.sh  docker-compose.yml
.claude/agents/: qa-tester.md
agent/: Dockerfile  pyproject.toml
agent/src/: __init__.py  config.py  main.py
agent/src/db/: connection.py
agent/src/graph/: echo_agent.py  guardrail.py  portfolio_agent.py  state.py
agent/src/graph/nodes/: __init__.py  career.py  grounding.py  supervisor.py  technical.py
agent/src/graph/tools/: __init__.py  career_tools.py  portfolio_tools.py  rag_tool.py
agent/src/llm/: __init__.py  factory.py  prompts.py  tools_schema.py
agent/src/pipeline/: __init__.py  career_loader.py  embedder.py  github_fetcher.py  markdown_parser.py  store.py
agent/src/rag/: __init__.py  retriever.py
agent/src/routers/: agent.py  pipeline.py
agent/tests/: test_live_services.py
docs/: scenarios.md  service-plan.md  ui-design.md
docs/qa/: live-services.md
docs/screen-design/mobile_portfolio_chat_overlay/: code.html
docs/security-incidents/: 2026-04-11-postgres-exposure.md
scripts/: check-ports.allowlist  check-ports.sh
test-bed/: A2UI_TEST_CASES.md  TEST_CASES.md  TOOL_CALLING_TEST_RESULTS.md  conftest.py  qa_full_test.py  qa_results.json  test_concurrent.py  test_edge_cases.py  test_multi_turn.py  test_rag_quality.py  test_single_turn.py
test-bed/utils/: sse_client.py
web/: .npmrc  Dockerfile  package.json  tsconfig.tsbuildinfo
web/messages/: en.json  ko.json
web/prisma/: schema.prisma  seed.ts
web/src/: middleware.ts
(+92 files in other folders)
