[project]
name = "portfoliolive-agent"
version = "0.1.0"
description = "PortfolioLive FastAPI + LangGraph Agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.50,<0.3.0",
    "langchain-google-genai>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.0",
    "copilotkit==0.1.39",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.27.2",
    "google-generativeai>=0.8.6",
    "google-genai>=1.2.0",
    "ag-ui-protocol>=0.1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
